changed README, fixed to java17 some stupid things Or did